--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 #
 
 # Name of your site (displayed in the header)
-name: Samuel
+name: Sazzer
 colour: $white; 
 
 # Short bio or description (displayed in the header)
