--- a/_config.yml
+++ b/_config.yml
@@ -21,6 +21,7 @@ avatar: http://eqforchildren.com/wp-content/uploads/Emoji_Hopeful.png
 footer-links:
   dribbble:
   email: samuel.brown@challoners.org
+  email: samuelion@icloud.com
   facebook:
   flickr:
   github: Sazzer7
@@ -28,7 +29,6 @@ footer-links:
   linkedin:
   pinterest:
   rss: # just type anything here for a working RSS icon
-  icloud: samuelion@icloud.com
   twitter: jekyllrb
   stackoverflow: # your stackoverflow profile, e.g. "users/50476/bart-kiers"
   youtube: # channel/<your_long_string> or user/<user-name>
