--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ description: Hopeful new programmer.
 colour: $white;
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: http://eqforchildren.com/wp-content/uploads/Emoji_Hopeful.png
+avatar: https://s-media-cache-ak0.pinimg.com/originals/dd/39/b6/dd39b66e58c94237fe34eb83c37637aa.gif
 
 #
 # Flags below are optional
