--- a/_config.yml
+++ b/_config.yml
@@ -25,9 +25,9 @@ footer-links:
   facebook:
   flickr:
   github: Sazzer7
-  instagram:
+  instagram: S_brown7
   linkedin:
-  pinterest:
+  pinterest: Samuel Brown
   rss: # just type anything here for a working RSS icon
   twitter: jekyllrb
   stackoverflow: # your stackoverflow profile, e.g. "users/50476/bart-kiers"
