--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 #
 
 # Name of your site (displayed in the header)
-name: Sazzer
+name: 女 Slion 女
 colour: $white; 
 
 # Short bio or description (displayed in the header)
