--- a/_config.yml
+++ b/_config.yml
@@ -3,11 +3,11 @@
 #
 
 # Name of your site (displayed in the header)
-name: 女 Slion 女
+name: Q7 Slion 7Q
 colour: $white; 
 
 # Short bio or description (displayed in the header)
-description: Hopeful new programmer.
+description: Hopeful New Programmer.
 colour: $white;
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
