--- a/_config.yml
+++ b/_config.yml
@@ -28,7 +28,7 @@ footer-links:
   instagram: S_brown7
   linkedin:
   pinterest: Samuel Brown
-  rss: # just type anything here for a working RSS icon
+  rss: EntireIdealCloudcomputing
   twitter: jekyllrb
   stackoverflow: # your stackoverflow profile, e.g. "users/50476/bart-kiers"
   youtube: # channel/<your_long_string> or user/<user-name>
