--- a/_config.yml
+++ b/_config.yml
@@ -31,7 +31,7 @@ footer-links:
   rss: EntireIdealCloudcomputing
   twitter: jekyllrb
   stackoverflow: # your stackoverflow profile, e.g. "users/50476/bart-kiers"
-  youtube: # channel/<your_long_string> or user/<user-name>
+  youtube: samuel.brown@challoners.org
   googleplus: # anything in your profile username that comes after plus.google.com/
   
 
